limitations under the License.
////
= TinkerPop3 CHANGELOG

== TinkerPop 3.8.0 (Grix Greven)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-67.png[width=185]

[[release-3-8-1]]
=== TinkerPop 3.8.1 (NOT OFFICIALLY RELEASED YET)

This release also includes changes from <<release-3-7-6, 3.7.6>>.

* Fixed bug in Gremlin orderability semantics for `OffsetDateTime`.
* Fixed bug in Javascript translation for UUID.
* Fixed bug in pre-repeat() `emit()/until()` where `emit()` and `until()` traversers weren't added to the results.
* Fixed bug in `GremlinValueComparator` that prevented collections of differing sizes from being comparable.
* Expose serialization functions for alternative transport protocols in gremlin-go
* Improved Gremlint formatting to keep the first argument for a step on the same line if line breaks were required to meet max line length.
* Improved Gremlint formatting to do greedy argument packing when possible so that more arguments can appear on a single line.

[[release-3-8-0]]
=== TinkerPop 3.8.0 (Release Date: November 12, 2025)

This release also includes changes from <<release-3-7-5, 3.7.5>>.

* Added a Gremlin MCP server.
* Added the Air Routes 1.0 dataset to the set of available samples packaged with distributions.
* Added a minimal distribution for `tinkergraph-gremlin` using the `min` classifier that doesn't include the sample datasets.
* Removed `AggregateLocalStep` and `aggregate(Scope, String)`, and renamed `AggregateGlobalStep` to `AggregateStep`.
* Removed `store()` in favor of using `local(aggregate())`.
* Removed Vertex/ReferenceVertex from grammar. Use vertex id in traversals now instead.
* Removed `has(key, traversal)` and `has(T, traversal)` options for `has()` step.
* Fixed bug where `InlineFilterStrategy` could add an empty `has()`.
* Normalized dotnet `Element.properties` to lists.
* Normalized python and javascript `Element.properties` to lists.
* Renamed `none()` step to `discard()`.